# X11-GUITest

./: Changes  Common.h  GUITest.h  GUITest.pm  GUITest.xs  KeyUtil.c  KeyUtil.h  MANIFEST  META.json  META.yml  MakeDocs.sh  Makefile.PL  README  typemap
docs/: Changes  CodingStyle  Packaging  ToDo  X11-GUITest.html  X11-GUITest.txt
eg/: FindControlVisually.pl  FindWindowLike.pl  TextEditor_1.pl  WebBrowser_1.pl
eg/templates/: ScriptTemplate.pl
recorder/: Makefile  autogen.sh  configure.ac  main.c  main.h  record.c  record.h  record_event.h  script_file.c  script_file.h
recorder/man/: x11guirecord.1
recorder/src/: Makefile.am  main.c  main.h  record.c  record.h  record_event.h  script_file.c  script_file.h
t/: test.t
